# linuxplorer

./: .env.example  README.md  main.py  pyproject.toml  run.py
app/: main.py
app/routes/: auth_routes.py  explorer_routes.py
app/services/: file_service.py  mail_service.py
app/templates/: explorer.html  login.html
